# gavhealth

./: .gitignore  CHANGELOG.md  DECISIONS.md  README.md  SESSION.md  STATUS.md  features.md  index.html  new_endpoints.py  package-lock.json  package.json
.claude/: launch.json
archive/: HANDOFF.md  architecture-viz-design.md  architecture-viz.html  calendar-mockup.html  dashboard-log-mockup-v2.html  dashboard-momentum-progress-mockup.html  day-detail-v2-mockup.html  food-quickadd-mockup.html  gavhealth[original-design].html  goals-dune-mockup.html  goals-orbit-mockup.html  hr-chart-mockup.html  mockup-calendar-item3.html  mockup-v2.html  momentum-mockup-v2.html  momentum-mockup.html  progressive-overload-mockup.html  session-picker-mockup.html  strength-session-consistency-mockup.html  strength-trends-mockup.html  trends-energy-balance-mockup.html  wk-pill-mockup.html
backend/: README.md  WIRING_GUIDE.md  import_withings_csv.py  migrate_005_exercise_muscles.sql  pyproject.toml  requirements.txt  seed_exercises.sql
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: health.py
backend/app/routers/: data.py  export.py  logging.py  momentum.py  new_endpoints.py  summary.py  test.py  withings.py
backend/app/schemas/: common.py  health.py
backend/app/services/: claude_service.py  momentum.py  readiness.py  withings_service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_sleep_stages.py  003_hr_intraday.py  004_withings_completeness.py  005_exercise_muscles.py
reference/: api.md  architecture.md  (+4 more)
(+187 files in other folders)
