[tool.poetry]
name = "gavhealth"
version = "0.1.0"
description = "Personal health tracking API backend"
authors = ["Gav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
anthropic = "^0.42.0"
httpx = "^0.28.0"
python-multipart = "^0.0.18"
alembic = "^1.14.0"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
